--- a/dcs_react/src/index.css
+++ b/dcs_react/src/index.css
@@ -298,22 +298,16 @@ a{
 .vision_wrap{padding: 0 8rem;max-width: 1400px;margin: 0 auto;}
 
 .vision_wrap .ask {font-size: 1.2rem;color: #454444;}
-.table_wrap{padding: 0 3rem;}
-.table_wrap h4{text-align: left;width: 100%;max-width: 55rem;font-weight: 900;font-size: 1.9rem;}
-.table{display: flex;flex-direction: column;align-items: center;padding: 5rem 0;}
-.table caption:nth-child(1){position: absolute;top: 0;left: 0;overflow: hidden;line-height: 0;}
-.table table{width: 55rem;width: 100%;max-width: 55rem;}
-.table thead td{color: #fff;background: #000080;font-weight: 700;text-align: center;font-size: 1.2rem;padding: 1rem 0;}
-.table tbody td{padding: 1rem 0;font-size: 1.1rem;font-weight: 600;text-align: center;}
-table {
-  border-collapse: separate; /* 간격을 적용하려면 separate 설정 */
-  border-spacing: 0 10px; /* 행 간격은 수직(두 번째 값), 열 간격은 수평(첫 번째 값) */
-  width: 100%; /* 테이블 너비 */
-}
-.table table, th, td {
-  border: 1px solid #eeeded;
-  border-collapse: collapse;
-}
+.table_wrap .table_wrap{padding: 0 3rem;}
+.table_wrap .table_wrap h4{text-align: left;width: 100%;max-width: 55rem;font-weight: 900;font-size: 1.9rem;}
+.table_wrap .table{display: flex;flex-direction: column;align-items: center;padding: 5rem 0;}
+.table_wrap .table caption:nth-child(1){position: absolute;top: 0;left: 0;overflow: hidden;line-height: 0;}
+.table_wrap .table table{width: 55rem;width: 100%;max-width: 55rem;}
+.table_wrap .table thead tr th{color: #fff;background: #000080;font-weight: 700;text-align: center;font-size: 1.2rem;padding: 1rem 0;}
+.table_wrap .table tbody td{padding: 1rem 0;font-size: 1.1rem;font-weight: 600;text-align: center;}
+.table_wrap .table.img img{width: 9rem;}
+.table_wrap .table table {border-collapse: collapse; border-spacing: 0 10px; width: 100%;}
+.table_wrap .table table, tr, th {border: 1px solid #eeeded;}
 /****** summary ******/
 .summary_wrap{margin-bottom: 9rem;padding: 4rem 0;display: flex;justify-content: center;}
 .summary_wrap .inner{padding: 0 8rem;display: flex;align-items: center;justify-content: space-around;}
