--- a/dcs_react/src/index.css
+++ b/dcs_react/src/index.css
@@ -298,8 +298,8 @@ a{
 .vision_wrap{padding: 0 8rem;max-width: 1400px;margin: 0 auto;}
 
 .vision_wrap .ask {font-size: 1.2rem;color: #454444;}
-.table_wrap .table_wrap{padding: 0 3rem;}
-.table_wrap .table_wrap h4{text-align: left;width: 100%;max-width: 55rem;font-weight: 900;font-size: 1.9rem;}
+.table_wrap {padding: 0 3rem;}
+.table_wrap h4{text-align: left;width: 100%;max-width: 55rem;font-weight: 900;font-size: 1.9rem;}
 .table_wrap .table{display: flex;flex-direction: column;align-items: center;padding: 5rem 0;}
 .table_wrap .table caption:nth-child(1){position: absolute;top: 0;left: 0;overflow: hidden;line-height: 0;}
 .table_wrap .table table{width: 55rem;width: 100%;max-width: 55rem;}
