--- a/dcs_react/src/index.css
+++ b/dcs_react/src/index.css
@@ -301,13 +301,13 @@ a{
 .table_wrap {padding: 0 3rem;}
 .table_wrap h4{text-align: left;width: 100%;max-width: 55rem;font-weight: 900;font-size: 1.9rem;}
 .table_wrap .table{display: flex;flex-direction: column;align-items: center;padding: 5rem 0;}
-.table_wrap .table caption:nth-child(1){position: absolute;top: 0;left: 0;overflow: hidden;line-height: 0;}
+.table_wrap .table caption:nth-child(1){position: absolute;top: 0;left: 0;overflow: hidden;line-height: 0;z-index: -1;width: 1px;height: 1px;}
 .table_wrap .table table{width: 55rem;width: 100%;max-width: 55rem;}
 .table_wrap .table thead tr th{color: #fff;background: #000080;font-weight: 700;text-align: center;font-size: 1.2rem;padding: 1rem 0;}
 .table_wrap .table tbody td{padding: 1rem 0;font-size: 1.1rem;font-weight: 600;text-align: center;}
 .table_wrap .table.img img{width: 9rem;}
 .table_wrap .table table {border-collapse: collapse; border-spacing: 0 10px; width: 100%;}
-.table_wrap .table table, tr, th {border: 1px solid #eeeded;}
+.table_wrap .table table, tr, th {border: 1px solid #eeeded;position: relative;}
 /****** summary ******/
 .summary_wrap{margin-bottom: 9rem;padding: 4rem 0;display: flex;justify-content: center;}
 .summary_wrap .inner{padding: 0 8rem;display: flex;align-items: center;justify-content: space-around;}
