--- a/dcs_react/src/index.css
+++ b/dcs_react/src/index.css
@@ -34,7 +34,7 @@ a{
 .header.hover::before {height: calc(var(--depth2-height, 100%)) !important; opacity: 1;}
 .header.fixed::before{height: var(--header-bg-height, 100%);box-shadow: 0px 4px 10px rgb(9 26 70 / 78%);}
 .header .container{padding: 0 clamp(40px, 3.125vw, 80px);margin: 0 auto;}
-.header .header-content{width: 100%;max-width: 192rem;display: flex;justify-content: center;margin: auto;position: relative;height: var(--header-height, 100px);}
+.header .header-content{width: 100%;max-width: 192rem;display: flex;justify-content: center;margin: auto;position: relative;height: var(--header-height, 100px);padding-left: 7rem;}
 .header .logo{position: absolute;top: 50%;transform: translateY(-50%);left: 0;}
 .header .logo img{width:248px; height:100px; object-fit: contain; }
 .header .depth1{line-height: 6rem;font-weight: 700;padding-bottom: .6rem;transition: color 0.3s ease; font-size:18px;position: relative;display: block;font-size: 1.4rem;}
@@ -50,7 +50,7 @@ a{
   transition: opacity calc(var(--anim-duration)* 3), 
   visibility calc(var(--anim-duration)* 3), 
   transform calc(var(--anim-duration)* 5) cubic-bezier(.19,1,.22,1);
-  font-size: 1.3rem;
+  font-size: 1.2rem;
 }
 .depth2.click{opacity: 1 !important; visibility: visible;}
 .header .depth2 li{display: inline-flex;}
